[package]
name = "installer"
version = "0.1.0"
authors = ["Julian Lazaras <umbrasdracodominus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "*"
serde_derive = "*"
serde_json = "*"
dirs = "*"
networking = {path = "../networking"}
manager = {path = "../manager"}
