[package]
name = "installer"
version = "0.1.0-alpha1"
description = "this crate serves as the installer for the artifice network, however it can also be used as a simple task scheduler"
authors = ["Julian Lazaras <umbrasdracodominus@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/artifice-network/installer"

keywords = ["artifice", "scheduler"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.56"
dirs = "3.0.1"
networking = "0.1.2"
manager = "0.1.1"
